--- a/index.css
+++ b/index.css
@@ -38,7 +38,12 @@ tbody {
   font-weight: 400;
   font-size: 0.9rem;
 }
-
+tbody tr:last-child td:first-child {
+  border-bottom-left-radius: 5px;
+}
+tbody tr:last-child td:last-child {
+  border-bottom-right-radius: 5px;
+}
 tbody tr:nth-child(even) {
   background: var(--secondary-color);
 }
@@ -52,12 +57,12 @@ thead th {
   font-size: 1rem;
   font-weight: 600;
 }
-th:first-child {
+/* th:first-child {
   border-top-left-radius: 5px;
 }
 th:last-child {
   border-top-right-radius: 5px;
-}
+} */
 .container {
   width: 900px;
   max-width: 100%;
@@ -65,6 +70,10 @@ th:last-child {
   text-align: center;
   display: grid;
   place-items: center;
+}
+
+tbody tr:hover {
+  color: var(--hover-color);
 }
 
 .btn {
@@ -109,4 +118,12 @@ th:last-child {
   margin-bottom: 1em;
   display: block;
   margin-bottom: 0.5em;
+}
+
+.hero {
+  background: var(--primary-color);
+  width: 100%;
+}
+.hero-heading {
+  color: #fff;
 }
